# mpilogging

./: README.md  setup.cfg
.github/workflows/: python-package.yml
src/mpilogging/: __init__.py  mpiFileHandler.py  mpiGatheredFileHandler.py  mpiProcFilter.py  mpiRankFilter.py  mpiScatteredFileHandler.py
tests/: test_mpi_logging.py
