[metadata]
name = MPIlogging
version = 0.0.1
author = Jonathan Guyer
author_email = guyer@nist.gov
description = A package for customizing logging when MPI is being used
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/usnistgov/mpilogging
project_urls =
    Bug Tracker = https://github.com/usnistgov/mpilogging/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Public Domain
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    mpi4py

[options.packages.find]
where = src
